gramatica.txt
Axiom = {Element} | λ
Element = NonLastElement, LastElement | LastElement | λ
NonLastElement = String:Value | NonLastElement, NonLastElement
LastElement = String:Value, | String:Value
String = QUOTED_STRING | UNQUOTED_STRING
Value = Number | QUOTED_STRING | BOOLEAN | Number Operator Number | NULL | {Element}
Number = INT | FLOAT | BINARY | OCTAL | HEXADECIMAL
Operator = == | < | > | >= | <=
